--- a/1_Requirements/Readme
+++ b/1_Requirements/Readme
@@ -1,1 +1,13 @@
+# EVALUATING CODE FOR LCDAND DATA ACQUISITION USING ATMEGA328
 
+* General Objectives:
+*  To evaluate and display any character on LCD
+*  To develop and integrate AVR microcontroller and sensors for electronic meter or related data acquisition system
+
+# Specific Objectives:
+*  To integrate an LCD with AVR microcontroller that can display a string of characters using hexadecimal data values.
+*  Implement a program code for ATMega328P to display the numbers 0 – 9 on the 16X2 LCD display using keypad. 
+*  Implement a program code for ATMega328P to build a working 1 – digit calculator, by using A key as + and C key as =. 
+*  Implement a program code for ATMega328P to build a working 1 – digit calculator, whereby the input can only be 1 – digit but cannot output 2 – digit results. 
+*  Proposing a solution using AVR microcontroller and I/O components in SIMULIDE which can solve a practical problem.
+*  Build a program code for ATMega328P that will implement a simple calculator with Addition, Subtraction, Multiplication and Division Operator
